--- a/index.html
+++ b/index.html
@@ -8,6 +8,58 @@
   <title>Beat Music</title>
 </head>
 <body>
-  
+  <!-- Cabeçalho com o menu de navegação -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Aqui inicio a parte principal do codigo -->
+  <main>
+    <!-- Primeira seção de introdução ao site -->
+    <section>
+      <h1>No começo da batida</h1>
+      <img src="img/life.svg" alt="Life">
+      <ul>
+        <li>AArte & Design</li>
+        <li>Estilo & Musica</li>
+        <li>Ebook & Videos</li>
+      </ul>
+    </section>
+
+    <!-- segunda seção com o conteudo das musicas -->
+    <section>
+      <h2>Aquarela</h2>
+      <p>Uma brincadeira com fotos , cores e efeitos, curta, compartilhe e deixe seu comentário, ficarei feliz pelo feedback.</p>
+
+      <img src="img/music1.jpg" alt="music 1">
+      <img src="img/music2.jpg" alt="music 2">
+      <img src="img/music3.jpg" alt="music 3">
+      <img src="img/music4.jpg" alt="music 4">
+
+      <a href="#">Ver mais</a>
+    </section>
+
+    <!-- Rodape do site com as redes sociais e navegação do menu -->
+    <footer>
+      <ul>
+        <li><a href="#"><img src="img/insta.svg" alt="instagram"></a></li>
+        <li><a href="#"><img src="img/face.svg" alt="Facebook"></a></li>
+        <li><a href="#"><img src="img/linkedin.svg" alt="linkedin"></a></li>
+        <li><a href="#"><img src="img/pinterest.svg" alt="pinterest"></a></li>
+      </ul>
+
+      <ul>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </footer>
+  </main>
 </body>
 </html>
