--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Cabeçalho com o menu de navegação -->
-  <header>
+  <header class="header">
     <nav>
       <ul>
         <li><a href="#">Portfolio</a></li>
@@ -22,36 +22,41 @@
   <!-- Aqui inicio a parte principal do codigo -->
   <main>
     <!-- Primeira seção de introdução ao site -->
-    <section>
-      <h1>No começo da batida</h1>
-      <img src="img/life.svg" alt="Life">
-      <ul>
-        <li>AArte & Design</li>
-        <li>Estilo & Musica</li>
-        <li>Ebook & Videos</li>
-      </ul>
+    <section class="introducao">
+      <div class="introducao-content">
+        <div>
+          <h1>No começo da batida</h1>
+          <img src="img/life.png" alt="Life">
+        </div>
+        <ul>
+          <li>AArte & Design</li>
+          <li>Estilo & Musica</li>
+          <li>Ebook & Videos</li>
+        </ul>
+      </div>
     </section>
 
     <!-- segunda seção com o conteudo das musicas -->
-    <section>
+    <section class="coteudo">
       <h2>Aquarela</h2>
       <p>Uma brincadeira com fotos , cores e efeitos, curta, compartilhe e deixe seu comentário, ficarei feliz pelo feedback.</p>
-
-      <img src="img/music1.jpg" alt="music 1">
-      <img src="img/music2.jpg" alt="music 2">
-      <img src="img/music3.jpg" alt="music 3">
-      <img src="img/music4.jpg" alt="music 4">
+      <div class="conteudo-discos-content">
+        <img src="img/music1.jpg" alt="music 1">
+        <img src="img/music2.jpg" alt="music 2">
+        <img src="img/music3.jpg" alt="music 3">
+        <img src="img/music4.jpg" alt="music 4">
+      </div>
 
       <a href="#">Ver mais</a>
     </section>
 
     <!-- Rodape do site com as redes sociais e navegação do menu -->
-    <footer>
+    <footer class="footer">
       <ul>
-        <li><a href="#"><img src="img/insta.svg" alt="instagram"></a></li>
-        <li><a href="#"><img src="img/face.svg" alt="Facebook"></a></li>
-        <li><a href="#"><img src="img/linkedin.svg" alt="linkedin"></a></li>
-        <li><a href="#"><img src="img/pinterest.svg" alt="pinterest"></a></li>
+        <li><a href="#"><img src="img/insta.png" alt="instagram"></a></li>
+        <li><a href="#"><img src="img/face.png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="img/linkedin.png" alt="linkedin"></a></li>
+        <li><a href="#"><img src="img/pinterest.png" alt="pinterest"></a></li>
       </ul>
 
       <ul>
